syntax = "proto3";

package payment;

option go_package =".;payment";

service PaymentService {
    rpc ProcessPayment (PaymentRequest) returns (PaymentResponse);
}

message PaymentRequest {
    uint64 user_id = 1;
    double amount = 2;
}

message PaymentResponse {
    string payment_id = 1;
    string message = 2;
    bool success = 3;
}
